--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Library/Java/JavaVirtualMachines/jdk-12.0.1.jdk/Contents/Home/lib/mysql-connector-java-8.0.16.jar"/>
+	<classpathentry kind="lib" path="/Users/sihyungyou/Downloads/mysql-connector-java-8.0.16/mysql-connector-java-8.0.16.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
